changes 25/04/19 3.0.9